Charts/mongodb-sharded/build/apps_v1_deployment_mongodb-sharded-mongos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: mongos
    app.kubernetes.io/instance: mongodb-sharded
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mongodb-sharded
    app.kubernetes.io/version: 7.0.9
    helm.sh/chart: mongodb-sharded-8.0.8
  name: mongodb-sharded-mongos
  namespace: mongo-sharded
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: mongos
      app.kubernetes.io/instance: mongodb-sharded
      app.kubernetes.io/name: mongodb-sharded
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: mongos
        app.kubernetes.io/instance: mongodb-sharded
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mongodb-sharded
        app.kubernetes.io/version: 7.0.9
        helm.sh/chart: mongodb-sharded-8.0.8
    spec:
      affinity:
        nodeAffinity: null
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: mongos
                  app.kubernetes.io/instance: mongodb-sharded
                  app.kubernetes.io/name: mongodb-sharded
              topologyKey: kubernetes.io/hostname
            weight: 1
      automountServiceAccountToken: false
      containers:
      - env:
        - name: MONGODB_ENABLE_NUMACTL
          value: "no"
        - name: BITNAMI_DEBUG
          value: "false"
        - name: MONGODB_SHARDING_MODE
          value: mongos
        - name: MONGODB_INIT_RETRY_ATTEMPTS
          value: "24"
        - name: MONGODB_INIT_RETRY_DELAY
          value: "5"
        - name: MONGODB_ROOT_USER
          value: root
        - name: MONGODB_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mongodb-root-password
              name: mongodb-sharded
        - name: MONGODB_REPLICA_SET_KEY
          valueFrom:
            secretKeyRef:
              key: mongodb-replica-set-key
              name: mongodb-sharded
        - name: MONGODB_POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: MONGODB_ADVERTISED_HOSTNAME
          value: $(MONGODB_POD_NAME)
        - name: MONGODB_PORT_NUMBER
          value: "27017"
        - name: MONGODB_CFG_PRIMARY_HOST
          value: mongodb-sharded-configsvr-0.mongodb-sharded-headless.mongo-sharded.svc.cluster.local
        - name: MONGODB_CFG_REPLICA_SET_NAME
          value: mongodb-sharded-configsvr
        - name: MONGODB_SYSTEM_LOG_VERBOSITY
          value: "0"
        - name: MONGODB_DISABLE_SYSTEM_LOG
          value: "no"
        - name: MONGODB_ENABLE_IPV6
          value: "no"
        - name: MONGODB_ENABLE_DIRECTORY_PER_DB
          value: "no"
        image: docker.io/bitnami/mongodb-sharded:8.0.9-debian-12-r0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - mongosh --port $MONGODB_PORT_NUMBER --eval "db.adminCommand('ping')"
          failureThreshold: 2
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 20
        name: mongos
        ports:
        - containerPort: 27017
          name: mongodb
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - mongosh --port $MONGODB_PORT_NUMBER --eval "db.adminCommand('ping')"
          failureThreshold: 6
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 20
        resources:
          limits:
            cpu: 750m
            ephemeral-storage: 1024Mi
            memory: 768Mi
          requests:
            cpu: 500m
            ephemeral-storage: 50Mi
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1001
          runAsNonRoot: true
          runAsUser: 1001
          seLinuxOptions: {}
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /tmp
          name: empty-dir
          subPath: tmp-dir
        - mountPath: /opt/bitnami/mongodb/conf
          name: empty-dir
          subPath: app-conf-dir
        - mountPath: /opt/bitnami/mongodb/tmp
          name: empty-dir
          subPath: app-tmp-dir
        - mountPath: /opt/bitnami/mongodb/logs
          name: empty-dir
          subPath: app-logs-dir
        - mountPath: /.mongodb
          name: empty-dir
          subPath: app-mongosh-dir
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: mongodb-sharded-mongos
      volumes:
      - emptyDir: {}
        name: empty-dir
