Charts/mongodb-sharded/build/v1_service_mongodb-sharded-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: mongodb-sharded
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mongodb-sharded
    app.kubernetes.io/version: 7.0.9
    helm.sh/chart: mongodb-sharded-8.0.8
  name: mongodb-sharded-headless
  namespace: mongo-sharded
spec:
  clusterIP: None
  ports:
  - name: mongodb
    port: 27017
  selector:
    app.kubernetes.io/instance: mongodb-sharded
    app.kubernetes.io/name: mongodb-sharded
  type: ClusterIP
