Charts/mongodb-sharded/build/networking.k8s.io_v1_networkpolicy_mongodb-sharded.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: mongodb-sharded
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mongodb-sharded
    app.kubernetes.io/version: 7.0.9
    helm.sh/chart: mongodb-sharded-8.0.8
  name: mongodb-sharded
  namespace: mongo-sharded
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 27017
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mongodb-sharded
      app.kubernetes.io/name: mongodb-sharded
  policyTypes:
  - Ingress
  - Egress
